<resources>
    <string name="app_name">Szolgáltatás kereső</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_send">Küldés</string>
    <string name="title_activity_login">Bejelentkezés</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">A mező megadása kötelező</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Regisztráció</string>
    <string name="error_passwords_not_match">A megadott jelszavaknak meg kell egyezniük</string>
    <string name="action_sign_up">Regisztráció</string>
    <string name="title_activity_details">Részletek</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Szolgáltatások</string>
    <string name="title_activity_newPost">Új hírdetés</string>
    <string name="action_attach">Kép</string>
    <string name="action_clear_pictures">Képek törlése</string>
    <string name="hint_title">Cím</string>
    <string name="hint_description">Leírás</string>
    <string name="description_section_header">Szolgáltatás leírása</string>
    <string name="error_field_minlength">Minimum hossz: %d</string>
    <string name="error_field_maxlength">Maximum hossz: %d</string>
    <string name="hint_postal_code">Irányítószám</string>
    <string name="error_field_pattern">Nem megfelelő formátum!</string>
    <string name="hint_price_min">Min ár</string>
    <string name="hint_price_max">Max ár</string>
    <string name="error_field_priceformat">Csak nem negatív, egész szám adható meg!</string>
    <string name="error_field_minValue">Minimum érték: %d</string>
    <string name="error_field_maxValue">Maximum érték: %d</string>
    <string name="error_field_price_min_more_than_max">A minimumnak kisebbnek kell lennie a maximumnál!</string>
    <string name="details_section_header">Szolgáltatás adatai</string>
    <string name="advertiser_section_header">Hírdető adatai</string>
    <string name="hint_name">Hírdető neve</string>
    <string name="hint_phone">Hírdető telefonszáma</string>
    <string name="action_clear_filter">Törlés</string>
    <string name="action_filter">Szűrés</string>
    <string name="title_activity_filter">Szűrés</string>
    <string name="action_done">Rendben</string>
    <string name="hint_city">Város</string>
    <string name="hint_date_from">Kezdő dátum</string>
    <string name="hint_date_to">Végső dátum</string>
</resources>
