<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hu.bme.onlab.ui.filter.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/price_min"
                android:inputType="number|numberDecimal|numberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price_min"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/price_max"
                android:inputType="number|numberDecimal|numberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price_max"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/date_from"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date_from"
                android:maxLines="1"
                android:singleLine="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/date_to"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date_to"
                android:maxLines="1"
                android:singleLine="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
